# push-to-talk

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
.cargo/: config.toml
.github/workflows/: release-macos.yml  release-windows.yml  release.yml
html/: index.css  index.html  index.js
icons/: icon.icns
ort-dylibs/: README.md
scripts/: build-macos.sh
src/: commands.rs  config.rs  hotkey.rs  indicator.rs  logging.rs  main.rs  models.rs  punctuator.rs  recorder.rs  state.rs  transcriber.rs  tray.rs  ui.rs  voice_service.rs
ui/: index.css  index.html  index.js  package-lock.json  package.json
ui/src/: App.css  App.tsx  types.ts  vite-env.d.ts
ui/src/components/: ConfigForm.tsx  DeviceSelector.tsx  DownloadModal.tsx  FlagIcon.tsx  LangSelect.tsx  LoggingPanel.tsx  ModelSelector.tsx  PunctuationPanel.tsx  RecordingControls.tsx  StatusBar.tsx
ui/src/hooks/: useConfig.ts  useDevices.ts  useModels.ts  useStatus.ts  useTauriReady.ts
ui/src/i18n/: translations.ts  useTranslation.ts
ui/src/services/: tauri.ts
