[package]
name = "push-to-talk"
version = "0.1.0"
edition = "2021"
description = "Push-to-talk voice input using Whisper"

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
cpal = "0.17"
hound = "3"
whisper-rs = { version = "0.15", features = ["log_backend"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "stream"], default-features = false }
indicatif = "0.17"
console = "0.15"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
shellexpand = "3"
tokio-stream = "0.1"
futures-util = "0.3"

# Tauri for GUI with global shortcuts
tauri = { version = "2", features = ["tray-icon", "image-png", "tracing"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"

# macOS: Metal + CoreML GPU + NSPasteboard
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal", "coreml", "log_backend"] }
objc2-foundation = { version = "0.3", features = ["NSString", "std"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "std"] }

# Windows: CUDA GPU
[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.15", features = ["cuda", "log_backend"] }
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
