[package]
name = "push-to-talk"
version = "0.1.0"
edition = "2021"
description = "Push-to-talk voice input using Whisper"

[dependencies]
anyhow = "1"
arboard = "3"
cpal = "0.17"
whisper-cpp-plus = { version = "0.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
shellexpand = "3"
futures-util = "0.3"

# ONNX Runtime for punctuation restoration (load-dynamic avoids DLL lock race)
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "api-18"], default-features = false }
# HuggingFace tokenizer (WordPiece) for punctuation model
tokenizers = { version = "0.21", features = ["onig"], default-features = false }

# Tauri for GUI with global shortcuts
tauri = { version = "2", features = ["tray-icon", "image-png", "tracing"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

# macOS: Metal GPU + NSPasteboard
[target.'cfg(target_os = "macos")'.dependencies]
whisper-cpp-plus = { version = "0.1", default-features = false, features = ["metal"] }
objc2-foundation = { version = "0.3", features = ["NSString", "std"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "std"] }

# Windows: CUDA GPU
[target.'cfg(windows)'.dependencies]
whisper-cpp-plus = { version = "0.1", default-features = false, features = ["cuda"] }
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
