[package]
name = "push-to-talk"
version = "0.1.1"
edition = "2021"
description = "A tray application that let's you trigger dictation mode in any application you are currently focused on"

[dependencies]
anyhow = "1"
arboard = "3"
cpal = "0.18"
whisper-cpp-plus = { version = "=0.1.5", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
reqwest = { version = "0.13", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
shellexpand = "3"
futures-util = "0.3"

# ONNX Runtime for punctuation restoration (load-dynamic avoids DLL lock race)
ort = { version = "2.0.0-rc.12", features = ["std", "load-dynamic", "api-24", "tracing"], default-features = false }
# HuggingFace tokenizer (WordPiece) for punctuation model
tokenizers = { version = "0.23", features = ["onig"], default-features = false }

# Tauri for GUI with global shortcuts
tauri = { version = "2", features = ["tray-icon", "image-png", "tracing"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

# macOS: Metal GPU + NSPasteboard
[target.'cfg(target_os = "macos")'.dependencies]
whisper-cpp-plus = { version = "=0.1.5", default-features = false, features = ["metal"] }
objc2-foundation = { version = "0.3", features = ["NSString", "std"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "std"] }

# Windows
[target.'cfg(windows)'.dependencies]
whisper-cpp-plus = { version = "=0.1.5", default-features = false }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = "3"

[features]
default = []
cuda = ["whisper-cpp-plus/cuda"]
